# VenomEngine

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD  Bazel_Makefile  CMakeLists.txt  LICENSE.md  MODULE.bazel  Makefile  README.md  WORKSPACE  count.sh  imgui.ini
VenomEngine/: CMakeLists.txt  MainScene.h  main.cc  main_graphics.cc  main_input.cc  main_scene.cc  main_scene2.cc  main_scene3.cc  main_scene4.cc  main_scene_damaged_helmet.cc  main_scene_large.cc  main_scene_lieutenant.cc  main_scene_sokol.cc  main_scene_space_attack.cc  main_scene_space_corridor.cc  main_scene_sponza.cc  main_scene_vulkan.cc
VenomEngine/Assets.xcassets/Images/VenomEngineLogo.imageset/: Contents.json
VenomEngine/iOS/: Info.plist  LaunchScreen.storyboard
VenomEngine/macOS/: Info.plist
lib/common/: Application.cc  BUILD  CMakeLists.txt  Context.cc  DLL.cc  Error.cc  Log.cc  Resources.cc  Vector.cc
lib/common/include/common/: Application.h  Context.h  DLL.h  Debug.h  Error.h  Export.h  Log.h  Resources.h  String.h
lib/common/include/common/math/: Math_Api.h  Vector.h
lib/common/include/venom/common/: Callback.h  ComponentManager.h  Config.h  Containers.h  Context.h  DLL.h  Debug.h  DeferredTrash.h  ECS.h  Error.h  Export.h  File.h  FileSystem.h  FpsCounter.h  Functional.h  Light.h  Log.h  MemoryPool.h  Platform.h  Ptr.h  Resources.h  SceneSettings.h  Singleton.h  String.h  Thread.h  Timer.h  Transform3D.h  Types.h  VenomEngine.h  VenomSettings.h
lib/common/include/venom/common/context/: ContextApple.h  ContextGLFW.h
lib/common/include/venom/common/context/apple/: ContextAppleDelegate.h  ContextAppleInfo.h  ContextAppleViewController.h  ContextAppleWindowController.h
lib/common/include/venom/common/math/: Math.h  Matrix.h  Vector.h
lib/common/include/venom/common/plugin/: Plugin.h  PluginManager.h  PluginObject.h  PluginType.h
lib/common/include/venom/common/plugin/context/: Context.h  ContextPlugin.h
lib/common/include/venom/common/plugin/graphics/: Buffer.h  Camera.h  GUI.h  GUI_Enum.h  GraphicsApplication.h  GraphicsPlugin.h  GraphicsPluginObject.h  GraphicsSettings.h  Light.h  Material.h  MaterialComponent.h  Mesh.h  Model.h  RenderPass.h  RenderTarget.h  RenderingPipeline.h  RenderingPipelineType.h  Shader.h  ShaderPipeline.h  ShaderResourceTable.h  Skybox.h  Texture.h
lib/common/src/: Buffer.cc  Camera.cc  ComponentManager.cc  Config.cc  Context.cc  ContextInput.cc  ContextPlugin.cc  DLL.cc  DeferredTrash.cc  ECS.cc  Error.cc  FpsCounter.cc  GUI.cc  GraphicsApplication.cc  GraphicsPlugin.cc  GraphicsPluginObject.cc  GraphicsSettings.cc  Light.cc  Log.cc  Log.mm  Material.cc  MaterialComponent.cc  Math.cc  Matrix.cc  MemoryPool.cc  Mesh.cc  Model.cc  Plugin.cc  PluginManager.cc  PluginObject.cc  RenderPass.cc  RenderTarget.cc  RenderingPipeline.cc  Resources.cc  Resources.mm  SceneSettings.cc  Shader.cc  ShaderPipeline.cc  ShaderResourceTable.cc  Skybox.cc  (+8 more)
lib/common/src/context/: ContextApple.mm  ContextAppleDelegate.mm  ContextAppleInfo.mm  ContextAppleInput.mm  ContextAppleViewController.mm  ContextAppleWindowController.mm  ContextGLFW.cc  ContextGLFWInput.cc
lib/context/uikit/: CMakeLists.txt
lib/context/uikit/include/: Context_UiKit.h
lib/context/uikit/src/: Context_UiKit.cc
lib/metal/: CMakeLists.txt
lib/metal/include/venom/metal/: Buffer.h  CommandPool.h  CommandPoolManager.h  CommandQueue.h  Debug.h  DescriptorPool.h  Device.h  Fence.h  Framebuffer.h  Image.h  ImageView.h  Instance.h  Layer.h  LogicalDevice.h  MetalApplication.h  PhysicalDevice.h  QueueManager.h  QueueOrderPool.h  RenderPass.h  Semaphore.h  StorageBuffer.h  SwapChain.h  UniformBuffer.h  VertexBuffer.h
lib/metal/include/venom/metal/plugin/graphics/: Buffer.h  Camera.h  GUI.h  GraphicsPlugin.h  Light.h  Material.h  Mesh.h  Model.h  RenderPass.h  RenderTarget.h  RenderingPipeline.h  ShaderPipeline.h  ShaderResourceTable.h  Skybox.h  Texture.h
lib/metal/src/: Buffer.cc  Buffer.mm  Camera.cc  CommandPoolManager.cc  CommandQueue.mm  Debug.cc  DeprecatedRenderPass.cc  DescriptorSet.cc  DescriptorSetLayout.cc  Device.mm  GUI.cc  GUI.mm  GraphicsPlugin.cc  ImageView.cc  Layer.mm  Light.cc  Material.cc  Mesh.cc  Mesh.mm  MetalApplication.mm  Model.cc  PhysicalDevice.cc  QueueManager.cc  QueueOrderPool.cc  RenderPass.cc  RenderPass.mm  RenderTarget.cc  RenderingPipeline.cc  Sampler.cc  ShaderPipeline.cc  ShaderPipeline.mm  ShaderResourceTable.cc  Skybox.cc  StorageBuffer.cc  Surface.cc  SwapChain.cc  Texture.cc  Texture.mm  UniformBuffer.cc
lib/vulkan/: BUILD  CMakeLists.txt  VulkanCommandPool.cc  VulkanCommandPool.h  VulkanDebug.cc  VulkanDebug.h  VulkanFence.cc  VulkanFence.h  VulkanInstance.cc  VulkanInstance.h  VulkanPhysicalDevice.cc  VulkanPhysicalDevice.h  VulkanQueueFamily.cc  VulkanQueueFamily.h  VulkanRenderPass.cc  VulkanRenderPass.h  VulkanSemaphore.cc  VulkanSemaphore.h  VulkanShader.cc  VulkanShader.h  VulkanSurface.cc  VulkanSurface.h  VulkanSwapChain.cc  VulkanSwapChain.h  vulkan.cc  vulkan.h
lib/vulkan/include/venom/vulkan/: Allocator.h  Application.h  Buffer.h  CommandPool.h  CommandPoolManager.h  Debug.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Fence.h  Framebuffer.h  Image.h  ImageView.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  QueueFamily.h  QueueManager.h  QueueOrderPool.h  RenderPass.h  Sampler.h  Semaphore.h  Shader.h  ShaderPipeline.h  StorageBuffer.h  Surface.h  SwapChain.h  UniformBuffer.h  VertexBuffer.h  VulkanApplication.h
lib/vulkan/src/: Allocator.cc  Application.cc  Buffer.cc  Camera.cc  CommandPool.cc  CommandPoolManager.cc  Debug.cc  DeprecatedRenderPass.cc  DescriptorPool.cc  DescriptorSet.cc  DescriptorSetLayout.cc  Fence.cc  Framebuffer.cc  GUI.cc  GUI_Apple.mm  GraphicsPlugin.cc  Image.cc  ImageView.cc  Instance.cc  Light.cc  LogicalDevice.cc  Material.cc  Mesh.cc  Model.cc  PhysicalDevice.cc  QueueFamily.cc  QueueManager.cc  RenderPass.cc  RenderTarget.cc  RenderingPipeline.cc  Sampler.cc  Semaphore.cc  Shader.cc  ShaderPipeline.cc  ShaderResourceTable.cc  Skybox.cc  StorageBuffer.cc  Surface.cc  SwapChain.cc  Texture.cc  (+6 more)
(+1837 files in other folders)
